--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,13 @@
   "description": "",
   "main": "index.js",
   "type": "module",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+     "start":"nodemon server.js",
+    "build":"npm i"
   },
   "author": "",
   "license": "ISC",
